tests/fail/fun-app/too-many-args.pion
//~ run = "${PION} elab ${FILE}"

{
let id = fun (x : Bool) => x;
let _ = id(false, true);
let _ = id(false, true, true);

let always = fun (x : Bool) (y : Int) => y;
let _ = always(false, 0, true);
let _ = always(false, 0, true, true);

Type
}
